style: enhance ui style

--- a/src/_includes/pages/aboutus.njk
+++ b/src/_includes/pages/aboutus.njk
@@ -8,8 +8,8 @@ plugins:
 ---
 
 <main class="flex-grow pt-16">
-
-    <section class="relative max-w-7xl mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    
+    <section class="relative max-w-7xl mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6 ps-4 pe-4">
     <div class="flex flex-col md:flex-row gap-1 lg:gap-10 mt-6">
 
         <!-- Text Container: Always on the right -->
@@ -21,7 +21,7 @@ plugins:
             <h2 class="text-2xl font-bold sm:text-3xl">
             إبدأ رحلتك الآن في عالم البرمجة والتصميم، وطوّر مهاراتك، وافتح آفاقًا جديدة مع أكاديمية أجي نكوديو!
             </h2>
-            <p class="mt-4 text-gray-600 text-lg mb-4 md:mb-0">
+            <p class="mt-4 text-base-600 text-lg mb-4 md:mb-0">
             إكتسب المهارات الرقمية التي تساعدك على تحقيق أهدافك الشخصية والمهنية من خلال برامج تدريبية مبتكرة تلبي احتياجات سوق العمل. انضم إلى أكاديمية آجي نكوديو لتتعلم من نخبة الخبراء في المجال، وابدأ رحلتك نحو مستقبل مهني واعد
             </p>
             <div class="mx-auto max-w-none" x-data>
@@ -45,21 +45,21 @@ plugins:
     </div>
     </section>
 
-    <section class="relative max-w-7xl mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section class="relative max-w-7xl mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6 ps-4 pe-4">
     <div class="flex flex-col md:flex-row-reverse gap-6 md:gap-10">
     <div class="">
-        <p class=" mb-2 md:mb-3 text-2xl md:text-3xl font-bold text-gray-900 text-right ltr:text-left">
+        <p class=" mb-2 md:mb-3 text-2xl md:text-3xl font-bold text-base-900 text-right ltr:text-left">
             مهمتنا
         </p>
-        <p class=" md:mb-3 text-base md:text-lg font-normal text-gray-600 text-right ltr:text-left">
+        <p class=" md:mb-3 text-base md:text-lg font-normal text-base-600 text-right ltr:text-left">
             تتجاوز مهمتنا البيانات المجردة, إنها التزام. نحن ملتزمون بتزويدك بالقدرة على تطوير المهارات والمعرفة اللازمة للتنقل في سوق العمل المتغير باستمرار. نؤمن بإمكانية كل طالب لدينا ونلتزم بتوفير الأدوات والموارد والدعم اللازم لإطلاق هذه الإمكانيات.
         </p>
     </div>
     <div class="">
-    <p class=" mb-2 md:mb-3 text-2xl md:text-3xl font-bold text-gray-900 text-right ltr:text-left">
+    <p class=" mb-2 md:mb-3 text-2xl md:text-3xl font-bold text-base-900 text-right ltr:text-left">
         رؤيتنا
     </p>
-    <p class=" md:mb-3 text-base md:text-lg font-normal text-gray-600 text-right ltr:text-left">
+    <p class=" md:mb-3 text-base md:text-lg font-normal text-base-600 text-right ltr:text-left">
         رؤيتنا هي أن نكون الرائدين في مجال التعليم عبر الإنترنت في المغرب وخارجه. نتطلع إلى خلق مجتمع دينامي وشامل من الأشخاص الذين يتوقون للتعلم طوال حياتهم، مُحرَّكين بفضولهم وشغفهم المشترك بالنمو والاكتشاف. نتخيل مستقبلًا حيث يتاح للجميع الفرصة للتعلم والنمو والنجاح.
     </p>
     </div>
@@ -67,7 +67,7 @@ plugins:
     </div>
     </section>
 
-    <section class="relative max-w-7xl mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section class="relative max-w-7xl mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6 ps-4 pe-4">
         <p class='text-center text-3xl md:text-3xl font-bold mb-4 md:mb-6' >قيمنا</p>
         <div class="grid grid-cols-1 gap-4 md:gap-4 md:grid-cols-2">
             <div class="flex flex-row-reverse items-start text-right ltr:text-left ml-auto">
@@ -112,12 +112,12 @@ plugins:
         </div>
     </section>
 
-    <section class="relative max-w-7xl mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section class="relative max-w-7xl mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6 ps-4 pe-4">
         <div class="container px-6 mx-auto">
             <p class='text-center text-3xl md:text-3xl font-bold mb-4 md:mb-6'>فريق العمل</p>
-            <p class="max-w-2xl mx-auto my-6 text-center text-gray-500 dark:text-gray-300">أعضاء هذا الفريق هم المبدعون والمؤسسون لأكاديمية اجي نكوديو الإلكترونية المتميزة</p>
+            <p class="max-w-2xl mx-auto my-6 text-center text-base-500 dark:text-base-300">أعضاء هذا الفريق هم المبدعون والمؤسسون لأكاديمية اجي نكوديو الإلكترونية المتميزة</p>
             <div class="grid grid-cols-1 gap-8 mt-8 xl:mt-16 md:grid-cols-2 xl:grid-cols-2">
-                <div class="px-12 py-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-[#0fb579] dark:border-gray-700 dark:hover:border-transparent">
+                <div class="px-12 py-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-[#0fb579] dark:border-base-700 dark:hover:border-transparent">
                     <div class="flex flex-col sm:-mx-4 sm:flex-row">
                         {% image "src/assets/images/K.svg", "woman smiling", ["svg","svg"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"flex-shrink-0 object-cover w-24 h-24"} %}
                         <div class="mt-4 sm:mx-4 sm:mt-0">
@@ -125,15 +125,16 @@ plugins:
                             كريم العيساوي
                             </h1>
 
-                            <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">مؤسس أكاديمية اجي نكوديو</p>
+                            <p class="mt-2 text-base-500 capitalize dark:text-base-300 group-hover:text-base-300 group-hover:text-white">مؤسس أكاديمية اجي نكوديو</p>
                         </div>
                     </div>
 
-                    <p class="mt-4 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">
-    مؤسس أكاديمية اجي نكوديو ، مهندس برمجيات ذو خبرة، ومطور ويب، مصمم غرافيك ومدرب. شغوف بالابتكار والتعليم، يسعى إلى نشر المعرفة، تمكين الآخرين، ومساعدتهم على تطوير مهاراتهم. من خلال التعليم العملي، وتوجيه الطلاب لبناء أسس تقنية قوية تضمن لهم النجاح في العالم الرقمي.                </p>
+                    <p class="mt-4 text-base-500 capitalize dark:text-base-300 group-hover:text-base-300 group-hover:text-white">
+                        مهندس برمجيات ذو خبرة، ومطور ويب، مصمم غرافيك ومدرب. شغوف بالابتكار والتعليم، يسعى إلى نشر المعرفة، تمكين الآخرين، ومساعدتهم على تطوير مهاراتهم. من خلال التعليم العملي، وتوجيه الطلاب لبناء أسس تقنية قوية تضمن لهم النجاح في العالم الرقمي.                    
+                    </p>
 
                     <div class="flex mt-4 -mx-2">
-                        <a href="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white" aria-label="Reddit">
+                        <a href="#" class="mx-2 text-base-600 dark:text-base-300 hover:text-base-500 dark:hover:text-base-300 group-hover:text-white" aria-label="Reddit">
                             <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -142,7 +143,7 @@ plugins:
                             </svg>
                         </a>
 
-                        <a href="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white" aria-label="Facebook">
+                        <a href="#" class="mx-2 text-base-600 dark:text-base-300 hover:text-base-500 dark:hover:text-base-300 group-hover:text-white" aria-label="Facebook">
                             <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -151,7 +152,7 @@ plugins:
                             </svg>
                         </a>
 
-                        <a href="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white" aria-label="Github">
+                        <a href="#" class="mx-2 text-base-600 dark:text-base-300 hover:text-base-500 dark:hover:text-base-300 group-hover:text-white" aria-label="Github">
                             <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -162,23 +163,23 @@ plugins:
                     </div>
                 </div>
 
-                <div class="px-12 py-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-[#0fb579] dark:border-gray-700 dark:hover:border-transparent">
+                <div class="px-12 py-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-[#0fb579] dark:border-base-700 dark:hover:border-transparent">
                     <div class="flex flex-col sm:-mx-4 sm:flex-row">
                         {% image "src/assets/images/A.svg", "woman smiling", ["svg","svg"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"flex-shrink-0 object-cover w-24 h-24"} %}
-
+            
                         <div class="mt-4 sm:mx-4 sm:mt-0">
                             <h1 class="text-xl font-semibold capitalize md:text-2xl dark:text-white group-hover:text-white">أشرف تفاح</h1>
 
-                            <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">مؤسس أكاديمية اجي نكوديو</p>
+                            <p class="mt-2 text-base-500 capitalize dark:text-base-300 group-hover:text-base-300 group-hover:text-white">مؤسس أكاديمية اجي نكوديو</p>
                         </div>
                     </div>
 
-                    <p class="mt-4 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">
+                    <p class="mt-4 text-base-500 capitalize dark:text-base-300 group-hover:text-base-300 group-hover:text-white">
                     مهندس برمجيات ذو خبرة، ومطور ويب ومدرب. شغوف بالابتكار والتعليم، يسعى إلى نشر المعرفة، تمكين الآخرين، ومساعدتهم على تطوير مهاراتهم. من خلال التعلم التطبيقي، يزوّد الطلاب بالخبرات اللازمة للنجاح في عالم التكنولوجيا.
                     </p>
 
                     <div class="flex mt-4 -mx-2">
-                        <a href="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white" aria-label="Reddit">
+                        <a href="#" class="mx-2 text-base-600 dark:text-base-300 hover:text-base-500 dark:hover:text-base-300 group-hover:text-white" aria-label="Reddit">
                             <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -187,7 +188,7 @@ plugins:
                             </svg>
                         </a>
 
-                        <a href="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white" aria-label="Facebook">
+                        <a href="#" class="mx-2 text-base-600 dark:text-base-300 hover:text-base-500 dark:hover:text-base-300 group-hover:text-white" aria-label="Facebook">
                             <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -196,7 +197,7 @@ plugins:
                             </svg>
                         </a>
 
-                        <a href="#" class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white" aria-label="Github">
+                        <a href="#" class="mx-2 text-base-600 dark:text-base-300 hover:text-base-500 dark:hover:text-base-300 group-hover:text-white" aria-label="Github">
                             <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -220,7 +221,7 @@ plugins:
             <h2 class="text-2xl font-bold md:text-3xl md:block hidden mb-4">
                 إفتح فرص جديدة في سوق الشغل
             </h2>
-            <p class=" text-gray-600 text-lg mb-4 md:mb-0">
+            <p class=" text-base-600 text-lg mb-4 md:mb-0 ps-4 pe-4">
                 شهادتنا ليست فقط تأكيداً على مهاراتك وقدراتك، بل هي بوابتك لفتح فرص عمل جديدة وتحقيق تقدير أكبر في سوق العمل
             </p>
             <div class="mx-auto max-w-none" x-data>
@@ -244,41 +245,42 @@ plugins:
         </div>
     </section>  
     
-    <section class="relative max-w-7xl mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section class="relative max-w-7xl mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6 ps-4 pe-4">
         <div class="text-center grid grid-cols-1 gap-1">    
         
             <div class="flex justify-center flex-col items-center col-span-1 ">
                 <p class="text-2xl font-bold sm:text-3xl mb-3 md:mb-4">
                     هل أنتم مستعدون للانطلاق في رحلة التعلم والنمو؟
-                <p class="text-lg font-normal sm:text-xl text-gray-600 max-w-2xl">
+                <p class="text-lg font-normal sm:text-xl text-base-600 max-w-2xl">
                     تابعنا على وسائل التواصل الاجتماعي لتحصل على نصائح مجانية ومعلومات قيمة تُساعدك في تطوير مهاراتك وفتح فرص عمل جديدة.
             </div>
 
             <ul class="mt-4 flex justify-center gap-6 md:gap-8 rtl:flex-row-reverse">
                 <li>
-                    <a href="https://www.instagram.com/ajincodew_/" rel="noreferrer" target="_blank" class="text-gray-700 transition hover:text-gray-700/75">
-                        <span class="sr-only">Instagram</span>
-                        <i class="fab fa-instagram text-2xl text-center" aria-hidden="true"></i>
-                    </a>
+                  <a href="https://www.instagram.com/ajincodew_/" rel="noreferrer" target="_blank" class="text-base-700 transition hover:text-base-700/75">
+                    <span class="sr-only">Instagram</span>
+                    <i class="fab fa-instagram text-2xl text-center hover:text-[#0fb579]" aria-hidden="true"></i>
+                  </a>
+
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/ajincodew.academy" rel="noreferrer" target="_blank" class="text-gray-700 transition hover:text-gray-700/75">
+                    <a href="https://www.facebook.com/ajincodew.academy" rel="noreferrer" target="_blank" class="text-base-700 transition hover:text-base-700/75">
                         <span class="sr-only">Facebook</span>
-                        <i class="fab fa-facebook text-2xl text-center" aria-hidden="true"></i>
+                        <i class="fab fa-facebook text-2xl text-center hover:text-[#0fb579]" aria-hidden="true"></i>
                     </a>
                 </li>
             
                 <li>
-                    <a href="https://www.linkedin.com/company/ajincodew2024" rel="noreferrer" target="_blank" class="text-gray-700 transition hover:text-gray-700/75">
+                    <a href="https://www.linkedin.com/company/ajincodew2024" rel="noreferrer" target="_blank" class="text-base-700 transition hover:text-base-700/75">
                         <span class="sr-only">LinkedIn</span>
-                        <i class="fab fa-linkedin text-2xl text-center" aria-hidden="true"></i>
+                        <i class="fab fa-linkedin text-2xl text-center hover:text-[#0fb579]" aria-hidden="true"></i>
                     </a>
                 </li>
             
                 <li>
-                    <a href="https://www.youtube.com/@aji_ncodew" rel="noreferrer" target="_blank" class="text-gray-700 transition hover:text-gray-700/75">
+                    <a href="https://www.youtube.com/@aji_ncodew" rel="noreferrer" target="_blank" class="text-base-700 transition hover:text-base-700/75">
                         <span class="sr-only">YouTube</span>
-                        <i class="fab fa-youtube text-2xl text-center" aria-hidden="true"></i>
+                        <i class="fab fa-youtube text-2xl text-center hover:text-[#0fb579]" aria-hidden="true"></i>
                     </a>
                 </li>
             </ul>
