--- a/src/_includes/pages/frontend.njk
+++ b/src/_includes/pages/frontend.njk
@@ -20,7 +20,7 @@ plugins:
             <h2 class="text-2xl font-bold sm:text-3xl">
                 احتراف تطوير الواجهات الأمامية: تصميم واجهات إبداعية وعصرية     
             </h2>
-            <p class="mt-4 text-gray-600 text-lg mb-4 md:mb-0">
+            <p class="mt-4 text-base-600 text-lg mb-4 md:mb-0">
                 كمطوّر  Front-End ستبدأ رحلتك بأساسيات تطوير الويب، ثم تتعمّق في الأدوات والتقنيات الحديثة المطلوبة ، وكل ذلك من خلال التطبيق العملي والمشاريع الحقيقية.
             </p>
             <div class="mx-auto max-w-none flex justify-around items-center flex-col md:flex-row gap-2 md:gap-0" x-data >
@@ -28,7 +28,7 @@ plugins:
                 بغيت نتعلم  
                 </a>
                 <a 
-                class="btn bg-white text-gray-900 shadow-lg border-b-1 border-gray-300 
+                class="btn bg-white text-base-900 shadow-lg border-b-1 border-base-300 
                 w-full px-0 md:my-6 mr-0 md:mr-4 " 
                 href="#content" >
                 محتوى تدريب            
@@ -52,7 +52,7 @@ plugins:
                     <h2 class="font-bold leading-tight text-2xl">
                         شنو غادي تعلم :
                     </h2>
-                    <ul class="text-gray-700 text-base md:text-lg list-inside pt-4">
+                    <ul class="text-base-700 text-base md:text-lg list-inside pt-4">
                         <li class='flex items-start flex-row mb-1.5 '>
                             <span class="px-2 py-1">
                                 <i class="fas fa-check"></i>
@@ -166,10 +166,10 @@ plugins:
     </section>
     
     <section class="relative max-w-3xl rtl:text-right ltr:text-left py-4 px-7 mx-auto md:px-8 md:py-10 md:mx-0 bg-white lg:ml-6">
-        <h2 class="font-semibold text-lg md:text-xl text-gray-900 ">
+        <h2 class="font-semibold text-lg md:text-xl text-base-900 ">
             يتضمن هذا تدريب :
         </h2>
-        <ul class="text-gray-700 text-base md:text-lg list-inside pt-3 ">
+        <ul class="text-base-700 text-base md:text-lg list-inside pt-3 ">
             <li class="flex items-start mb-1">
                 <span class="fa-solid fa-users-rectangle w-8 p-1"></span>
                 <p>حصص برمجة مباشرة عبر Google Meet</p>
@@ -202,9 +202,9 @@ plugins:
     </section>
 </div>
     
-    <section id="trainings" class='relative max-w-7xl mx-auto sm:px-6 mb-6 pt-6 mt-'>
+    <section id="trainings" class='relative max-w-7xl mx-auto sm:px-6 mb-6 pt-6'>
         <p class='text-center text-2xl md:text-3xl font-bold mb-2'>أكثر من مجرد تدريب</p>
-        <div class="grid grid-cols-1 gap-4 mt-6 md:gap-12 md:mt-12 md:grid-cols-2 lg:grid-cols-3">
+        <div class="grid grid-cols-1 gap-4 mt-6 md:gap-12 md:mt-12 md:grid-cols-2 lg:grid-cols-3 ms-4 me-4">
             <div class="flex flex-row-reverse items-start text-right ltr:text-left ml-auto">
                 <div class="mx-4">
                     <p class="text-lg font-semibold leading-tight">متابعة شخصية</p>
@@ -275,7 +275,7 @@ plugins:
             <div id="countdown" class="relative max-w-6xl mx-auto mb-3 mt-4">
                 <div class="flex flex-col items-center text-center">
                     <p class="text-xl md:text-2xl font-bold text-red-primary">سارع بالتسجيل! العرض ينتهي في:</p>
-                    <div id="timer" class="text-2xl md:text-3xl font-bold text-gray-800"></div>
+                    <div id="timer" class="text-2xl md:text-3xl font-bold text-base-800"></div>
                 </div>
             </div>    
             <div class="flex flex-row justify-between items-center w-full gap-2 md:gap-4">
@@ -293,12 +293,12 @@ plugins:
                 </div> 
                 <div class="flex flex-col justify-between items-start  h-70 md:h-80 w-full p-4 rounded-2xl border shadow-sm">
                     <p class="text-sm font-medium text-right text-white bg-neutral-400 rounded-md w-fit px-2 py-1 mb-2">أداء كل شهر</p>
-                    <p class="line-through text-2xl font-bold text-right text-gray-600">299 درهم</p>
+                    <p class="line-through text-2xl font-bold text-right text-base-600">299 درهم</p>
                     <div class="flex flex-row justify-center items-baseline">
-                        <p class=" text-5xl md:text-6xl font-bold text-right text-gray-600">249</p>
-                        <p class="text-lg md:text-xl font-semibold text-right text-gray-600 ">درهم</p>                     
+                        <p class=" text-5xl md:text-6xl font-bold text-right text-base-600">249</p>
+                        <p class="text-lg md:text-xl font-semibold text-right text-base-600 ">درهم</p>                     
                     </div>
-                    <p class="text-sm text-gray-600 text-right mb-2">هذا العرض يمكنك من الاستفادة من التدريب بدفع شهري.</p>                
+                    <p class="text-sm text-base-600 text-right mb-2">هذا العرض يمكنك من الاستفادة من التدريب بدفع شهري.</p>                
                     <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%A3%D9%85%D8%A7%D9%85%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20249%20%D8%AF%D8%B1%D9%87%D9%85%20%D9%81%D8%A7%D9%84%D8%B4%D9%87%D8%B1."
                     target="_blank"
                     onClick="fbq('track', 'Lead')" 
