feat: change trainings dropdown annimation

--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -266,26 +266,28 @@
                         <path d="M10.28 4.305L5.989 8.598 1.695 4.305A1 1 0 00.28 5.72l5 5a1 1 0 001.414 0l5-5a1 1 0 10-1.414-1.414z" />
                         </svg>
                     </a>
-                    <ul x-show="open" x-cloak class="text-center origin-top-right" x-bind:class="$mobile || 'absolute top-full right-0 z-10 w-64 ltr:text-left rtl:text-right origin-top-right'">
-                        <div class="relative px-2 pb-1 rounded md:border border-base-200 md:shadow-md bg-white w-fit text-right">
-                            <li class="p-2 font-medium flex items-center gap-3">
-                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-                                <a href="/ar/backend" class="ml-auto">تطوير الواجهة الخلفية</a>
-                            </li>
-                            <li class="p-2 font-medium flex items-center gap-3">
-                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-                                <a href="/ar/frontend" class="ml-auto">تطوير الواجهة الأمامية</a>
-                            </li>
-                            <li class="p-2 font-medium flex items-center gap-3">
-                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-                                <a href="/ar/design-graphic" class="ml-auto">التصميم الجرافيكي</a>
-                            </li>
-                            <li class="p-2 font-medium flex items-center gap-3">
-                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-                                <a href="/ar/informatique-bureautique" class="ml-auto">المعلوميات المكتبية</a>
-                            </li>
-                        </div>
-                    </ul>
+                  <ul x-show="open" x-cloak class="text-center origin-top-right" x-bind:class="$mobile || 'absolute top-full right-0 z-10 w-64 ltr:text-left rtl:text-right origin-top-right'">
+    <div class="relative px-2 pb-1 rounded md:border border-base-200 md:shadow-md bg-white w-fit text-right">
+        <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+            <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+            <a href="/ar/backend" class="ml-auto">تطوير الواجهة الخلفية</a>
+        </li>
+        <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+            <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+            <a href="/ar/frontend" class="ml-auto">تطوير الواجهة الأمامية</a>
+        </li>
+        <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+            <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+            <a href="/ar/design-graphic" class="ml-auto">التصميم الجرافيكي</a>
+        </li>
+        <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+            <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+            <a href="/ar/informatique-bureautique" class="ml-auto">المعلوميات المكتبية</a>
+        </li>
+    </div>
+</ul>
+
+
 
                     </li>
 
