--- a/src/_includes/pages/backend.njk
+++ b/src/_includes/pages/backend.njk
@@ -312,7 +312,7 @@ plugins:
             </ul>
         </div>
         <div class="grid grid-cols-1">
-            <div id="countdown" class="relative max-w-6xl mx-auto mb-3 mt-4">
+            <div id="countdown" class="relative max-w-6xl mx-auto mb-3 mt-4 ms-4 me-4">
                 <div class="flex flex-col items-center text-center">
                     <p class="text-xl md:text-2xl font-bold text-red-primary">سارع بالتسجيل! العرض ينتهي في:</p>
                     <div id="timer" class="text-2xl md:text-3xl font-bold text-base-800"></div>
