--- a/src/_includes/pages/home.njk
+++ b/src/_includes/pages/home.njk
@@ -79,7 +79,7 @@
     <section id="trainings" class='relative max-w-7xl mx-auto sm:px-6 mb-6 pt-6 ps-4 pe-4'>
         <p class='text-3xl md:text-3xl font-bold mb-8 text-center'>تدريباتنا</p>
             <div class="flex flex-col md:flex-row rtl:md:flex-row-reverse justify-center items-center gap-4 md:gap-8">
-                <a class="overflow-hidden rounded-xl shadow-xl border border-base-300" href={{ "/ar/backend" }} >
+                <a class="overflow-hidden rounded-xl shadow-xl border border-base-300" href={{ "/ar/frontend" }} >
                     <div class="md:p-8 px-5 py-6">
                         <ul class="flex md:space-x-1 flex-wrap space-y-1 ">
                             <li class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1">
@@ -277,6 +277,151 @@
 
                         <p class="mt-2 text-base text-base-500">
                             اختصر الوقت وتعلّم جميع أساسيات تطوير الواجهة الخلفية من خلال مشاريع تطبيقية ودروس عملية، في ثلاثة أشهر فقط!
+                        </p>
+                        
+                        <p
+                            class="inline-block pb-1 mt-4 font-medium text-green-primary
+                            border-b border-green-primary "
+                        >
+                            إبدأ الآن
+                        </p>
+                    </div>
+                </a>
+            </div>
+
+                        <div class="flex flex-col md:flex-row rtl:md:flex-row-reverse justify-center items-center gap-4 md:gap-8">
+                <a class="overflow-hidden rounded-xl shadow-xl border border-base-300" href={{ "/ar/informatique-bureautique" }} >
+                    <div class="md:p-8 px-5 py-6">
+                        <ul class="flex md:space-x-1 flex-wrap space-y-1 ">
+                            <li class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1">
+                                HTML
+                            </li>
+                            <li
+                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                            >
+                                CSS                    
+                            </li>
+                            <li
+                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                            >
+                                JavaScript
+                            </li>
+                            <li
+                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                            >
+                                ReactJs
+                            </li>
+                            <li
+                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                            >
+                                Flexbox
+                            </li>
+                            <li
+                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                            >
+                                SEO
+                            </li>
+                            <li
+                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                            >
+                                Responsive Design
+                            </li>
+                            <li
+                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                            >
+                                Hosting & Deployment
+                            </li>
+                            <li
+                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                            >
+                                Tailwind CSS
+                            </li>   
+                            <li
+                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                            >
+                                WordPress
+                            </li>
+                        </ul>
+
+         <p class="my-2.5 text-2xl font-bold">
+                            تدريب المعلوميات المكتبية                        
+                        </p>
+
+                        <p class="mt-2 text-base text-base-500">
+                            هذه الدورة ستمنحك المهارات التي تحتاجها لاستخدام برامج مثل Word ، Excel، PowerPoint ، 
+                            مما سيسهم في تحسين أدائك الشخصي والمهني.                        
+                        </p>
+                        
+                        <p
+                            <p
+                                class="inline-block pb-1 mt-4 font-medium text-green-primary
+                                border-b border-green-primary "
+                            >
+                                إبدأ الآن
+                            </p>
+                    </div>
+                </a>
+
+
+                <a 
+                    class="overflow-hidden rounded-xl 
+                    shadow-xl border border-base-300" href={{ "/ar/design-graphic" }}
+                >
+                    <div class="md:p-8 px-5 py-6">
+                        <ul class="flex md:space-x-1 flex-wrap space-y-1 ">
+                            <li
+                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                            >
+                                Visual identity
+                            </li>
+                            <li
+                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                            >
+                                Logo design
+                            </li>
+                            <li
+                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                            >
+                                Printing
+                            </li>
+                            <li
+                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                            >
+                                AI tools for design
+                            </li>
+                            <li
+                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                            >
+                                Design
+                            </li>
+                            <li
+                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                            >
+                                Colors Theory
+                            </li>
+                            <li
+                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                            >
+                                InDesign
+                            </li>
+                            <li
+                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                            >
+                                Illustrator 
+                            </li>
+                            <li
+                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                            >
+                                Photoshop 
+                            </li>
+                        </ul>
+
+                        <p class="my-2.5 text-2xl font-bold">
+                            تدريب التصميم الجرافيكي                
+                        </p>
+
+                        <p class="mt-2 text-base text-base-500">
+                        هذه الدورة تمنحك الأساس القوي والمهارات العملية التي تحتاجها لتحقيق أهدافك في عالم التصميم الرقمي.                        
                         </p>
                         
                         <p
