feat: change training tags

--- a/src/_includes/pages/home.njk
+++ b/src/_includes/pages/home.njk
@@ -288,62 +288,22 @@
                     </div>
                 </a>
             </div>
-
-                        <div class="flex flex-col md:flex-row rtl:md:flex-row-reverse justify-center items-center gap-4 md:gap-8">
+            
+            <div class="flex flex-col md:flex-row rtl:md:flex-row-reverse justify-center items-center gap-4 md:gap-8">
                 <a class="overflow-hidden rounded-xl shadow-xl border border-base-300" href={{ "/ar/informatique-bureautique" }} >
                     <div class="md:p-8 px-5 py-6">
-                        <ul class="flex md:space-x-1 flex-wrap space-y-1 ">
-                            <li class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1">
-                                HTML
-                            </li>
-                            <li
-                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
-                            >
-                                CSS                    
-                            </li>
-                            <li
-                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
-                            >
-                                JavaScript
-                            </li>
-                            <li
-                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
-                            >
-                                ReactJs
-                            </li>
-                            <li
-                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
-                            >
-                                Flexbox
-                            </li>
-                            <li
-                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
-                            >
-                                SEO
-                            </li>
-                            <li
-                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
-                            >
-                                Responsive Design
-                            </li>
-                            <li
-                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
-                            >
-                                Hosting & Deployment
-                            </li>
-                            <li
-                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
-                            >
-                                Tailwind CSS
-                            </li>   
-                            <li
-                                class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
-                            >
-                                WordPress
-                            </li>
-                        </ul>
-
-         <p class="my-2.5 text-2xl font-bold">
+                       <ul class="flex md:space-x-1 flex-wrap space-y-1 ">
+                        <li class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1">PowerPoint</li>
+                        <li class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1">Excel</li>
+                        <li class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1">Microsoft Word</li>
+                        <li class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1">Office365</li>
+                        <li class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1">Data Analysis</li>
+                        <li class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1">Spreadsheet Skills</li>
+                        <li class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1">Automation</li>
+                        <li class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1">Data Entry</li>
+                        <li class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1">Advanced Excel</li>
+                    </ul>
+                    <p class="my-2.5 text-2xl font-bold">
                             تدريب المعلوميات المكتبية                        
                         </p>
 
