--- a/src/_includes/pages/aboutus.njk
+++ b/src/_includes/pages/aboutus.njk
@@ -118,7 +118,7 @@ plugins:
                     <div class="flex flex-col sm:-mx-4 sm:flex-row">
                         {% image "src/assets/images/K.svg", "woman smiling", ["svg","svg"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"flex-shrink-0 object-cover w-24 h-24"} %}
                         <div class="mt-4 sm:mx-4 sm:mt-0">
-                            <h1 class="text-xl font-semibold capitalize md:text-2xl dark:text-white group-hover:text-white">
+                            <h1 class="text-xl font-semibold capitalize md:text-2xl dark:text-dark group-hover:text-white">
                             كريم العيساوي
                             </h1>
 
@@ -165,7 +165,7 @@ plugins:
                         {% image "src/assets/images/A.svg", "woman smiling", ["svg","svg"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"flex-shrink-0 object-cover w-24 h-24"} %}
             
                         <div class="mt-4 sm:mx-4 sm:mt-0">
-                            <h1 class="text-xl font-semibold capitalize md:text-2xl dark:text-white group-hover:text-white">أشرف تفاح</h1>
+                            <h1 class="text-xl font-semibold capitalize md:text-2xl dark:text-dark group-hover:text-white">أشرف تفاح</h1>
 
                             <p class="mt-2 text-base-500 capitalize dark:text-base-300 group-hover:text-base-300 group-hover:text-white">مؤسس أكاديمية اجي نكوديو</p>
                         </div>
