feat: change trainings price and add training to navbar dropdown

--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -129,6 +129,23 @@
             <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
             <a href="/ar/office-it" class="ml-auto">المعلوميات المكتبية</a>
         </li>
+        <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+            <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+            <a href="/ar/python" class="ml-auto">تدريب لغة بايثون</a>
+        </li>
+        <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+            <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+            <a href="/ar/java" class="ml-auto">تدريب لغة جافا</a>
+        </li>
+        <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+            <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+            <a href="/ar/javascript" class="ml-auto">تدريب جافاسكريبت</a>
+        </li>
+        <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+            <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+            <a href="/ar/c-and-cpp" class="ml-auto">تدريب لغة C و ++C</a>
+        </li>
+
     </div>
 </ul>
 
