--- a/src/_includes/pages/java.njk
+++ b/src/_includes/pages/java.njk
@@ -261,7 +261,10 @@ plugins:
         <div class="grid grid-cols-1">
             <div id="countdown" class="relative max-w-6xl mx-auto mb-3 mt-4 ms-4 me-4">
                 <div class="flex flex-col items-center text-center">
-                    <p class="text-xl md:text-2xl font-bold text-red-primary">سارع بالتسجيل! العرض ينتهي في:</p>
+<p class="text-xl md:text-2xl font-bold text-red-primary">
+  سارع بالتسجيل! العرض متاح حتى: 
+  <span class="text-red-600 animate-pulse font-extrabold">20/04/2025</span>
+</p>
                     <div id="timer" class="text-2xl md:text-3xl font-bold text-base-800"></div>
                 </div>
             </div>    
@@ -270,7 +273,7 @@ plugins:
                     <p class="text-sm font-medium text-right text-red-primary bg-white rounded-md w-fit px-2 py-1 mb-2">أداء مرة واحدة</p>
                     <p class="line-through text-2xl font-bold text-right text-white">699 درهم</p>
                     <div class="flex flex-row justify-center items-baseline">
-                        <p class=" text-5xl md:text-6xl font-bold text-right text-white">599</p>
+                        <p class=" text-5xl md:text-6xl font-bold text-right text-white">399</p>
                         <a class="text-lg md:text-xl font-semibold text-right text-white">درهم</a>              
                     </div>
                         <p class="text-sm text-white text-right mb-2">هذا العرض يمكنك من الاستفادة من التدريب كاملاً (3 أشهر) بدفع مرة واحدة.</p>     
@@ -282,7 +285,7 @@ plugins:
                     <p class="text-sm font-medium text-right text-white bg-neutral-400 rounded-md w-fit px-2 py-1 mb-2">أداء كل شهر</p>
                     <p class="line-through text-2xl font-bold text-right text-base-600">299 درهم</p>
                     <div class="flex flex-row justify-center items-baseline">
-                        <p class=" text-5xl md:text-6xl font-bold text-right text-base-600">249</p>
+                        <p class=" text-5xl md:text-6xl font-bold text-right text-base-600">199</p>
                         <p class="text-lg md:text-xl font-semibold text-right text-base-600 ">درهم</p>                     
                     </div>
                     <p class="text-sm text-base-600 text-right mb-2">هذا العرض يمكنك من الاستفادة من التدريب بدفع شهري.</p>                
@@ -299,24 +302,3 @@ plugins:
 </section>
     {% jsx "FAQ", name="backend" %}
 </main>
-
-<script>
-  const countdownDate = new Date("Nov 7, 2024 11:59:59").getTime();
-
-  const countdownFunction = setInterval(() => {
-    const now = new Date().getTime();
-    const distance = countdownDate - now;
-
-    const days = Math.floor(distance / (1000 * 60 * 60 * 24));
-    const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-    const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-    const seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-    document.getElementById("timer").innerHTML = `${days}d ${hours}h ${minutes}m ${seconds}s`;
-
-    if (distance < 0) {
-      clearInterval(countdownFunction);
-      document.getElementById("timer").innerHTML = "EXPIRED";
-    }
-  }, 1000);
-</script>
