--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -111,47 +111,61 @@
                         <path d="M10.28 4.305L5.989 8.598 1.695 4.305A1 1 0 00.28 5.72l5 5a1 1 0 001.414 0l5-5a1 1 0 10-1.414-1.414z" />
                         </svg>
                     </a>
-                  <ul x-show="open" x-cloak class="text-center origin-top-right" x-bind:class="$mobile || 'absolute top-full right-0 z-10 w-64 ltr:text-left rtl:text-right origin-top-right'">
-    <div class="relative px-2 pb-1 rounded md:border border-base-200 md:shadow-md bg-white w-fit text-right">
-        <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
-            <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-            <a href="/ar/backend" class="ml-auto">تطوير الواجهة الخلفية</a>
-        </li>
-        <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
-            <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-            <a href="/ar/frontend" class="ml-auto">تطوير الواجهة الأمامية</a>
-        </li>
-        <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
-            <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-            <a href="/ar/graphic-design" class="ml-auto">التصميم الجرافيكي</a>
-        </li>
-        <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
-            <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-            <a href="/ar/office-it" class="ml-auto">المعلوميات المكتبية</a>
-        </li>
-        <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
-            <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-            <a href="/ar/python" class="ml-auto">تدريب لغة بايثون</a>
-        </li>
-        <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
-            <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-            <a href="/ar/java" class="ml-auto">تدريب لغة جافا</a>
-        </li>
-        <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
-            <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-            <a href="/ar/javascript" class="ml-auto">تدريب جافاسكريبت</a>
-        </li>
-        <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
-            <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-            <a href="/ar/c-and-cpp" class="ml-auto">تدريب لغة C و ++C</a>
-        </li>
-
-    </div>
-</ul>
-
-
-
+                    <ul x-show="open" x-cloak class="text-center origin-top-right" x-bind:class="$mobile || 'absolute top-full right-0 z-10 w-64 ltr:text-left rtl:text-right origin-top-right'">
+                        <div class="relative px-2 pb-1 rounded md:border border-base-200 md:shadow-md bg-white w-fit text-right">
+                            <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+                                <a href="/ar/backend" class="ml-auto">تطوير الواجهة الخلفية</a>
+                            </li>
+                            <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+                                <a href="/ar/frontend" class="ml-auto">تطوير الواجهة الأمامية</a>
+                            </li>
+                            <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+                                <a href="/ar/graphic-design" class="ml-auto">التصميم الجرافيكي</a>
+                            </li>
+                            <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+                                <a href="/ar/office-it" class="ml-auto">المعلوميات المكتبية</a>
+                            </li>
+                        </div>
+                    </ul>
                     </li>
+
+
+                    <li class="relative z-50" x-data="{open: false}" x-on:mouseover="$mobile || (open = true)"
+                        x-on:mouseout="$mobile || (open = false)" x-on:focus="$mobile || (open = true)"
+                        x-on:blur="$mobile || (open = false)" x-on:click="$mobile && (open = !open)" @resize.window="open = false">
+                    <a class="hover:text-base-900 py-2 flex items-center justify-center transition duration-150 ease-in-out" href="#0"
+                        x-bind:aria-expanded="open" x-on:click.prevent>
+                        تدريبات خاصة
+                        <svg class="ml-2 w-3 h-3 fill-current cursor-pointer flex-shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M10.28 4.305L5.989 8.598 1.695 4.305A1 1 0 00.28 5.72l5 5a1 1 0 001.414 0l5-5a1 1 0 10-1.414-1.414z" />
+                        </svg>
+                    </a>
+                    <ul x-show="open" x-cloak class="text-center origin-top-right" x-bind:class="$mobile || 'absolute top-full right-0 z-10 w-64 ltr:text-left rtl:text-right origin-top-right'">
+                        <div class="relative px-2 pb-1 rounded md:border border-base-200 md:shadow-md bg-white w-fit text-right">
+                            <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+                                <a href="/ar/python" class="ml-auto">تدريب لغة بايثون</a>
+                            </li>
+                            <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+                                <a href="/ar/java" class="ml-auto">تدريب لغة جافا</a>
+                            </li>
+                            <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+                                <a href="/ar/javascript" class="ml-auto">تدريب جافاسكريبت</a>
+                            </li>
+                            <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+                                <a href="/ar/c-and-cpp" class="ml-auto">تدريب لغة C و ++C</a>
+                            </li>
+                        </div>
+                    </ul>
+                    </li>
+
 
                     <li class="mr-4">
                     <a href="/ar/aboutus" class="text-base-700 px-4 py-2 rounded-md transition duration-300 ease-in-out hover:bg-[#0fb579] hover:text-white">من نحن</a>
